--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
 
     implementation 'com.google.android.material:material:1.9.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+// GSON
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
